--- a/Index.html
+++ b/Index.html
@@ -76,7 +76,7 @@
           </ul>
  
 
-        <h1>JBC-DESING</h1>
+        <a href="https://jbcdesing.github.io/blessed/"><h1>JBC-DESING</h1></a>
         <p class="ms-3 text-danger">seeing the impossible become your new reality</p>
       <div class="g">
         <img src="./Public/Images/jbc.JPG">
